2009-05-07  Tyler Romeo  <tylerromeo@gmail.com>

	*acctshell.py: Startup script updated. Account shell starts up and stores requests.
	*app/controllers.py (AccountShell.handleRequest): Fixed variable name issue.

	*app/models.py (Request.getInfo): Added configuration option to allow/disallow retrieval of password from Request object.

2009-05-06  Tyler Romeo  <tylerromeo@gmail.com>

	*app/models.py (Database.updateFromFile): Fixed variable names in function.
	*app/models.py (Request.updateToDatabase): Object now creates new database line for new request rather than changing a nonexistent one.
	*app/models.py (Request.updateFromDatabase): Fixed variable names.
	Account shell successfully creates, stores, and recalls requests (still bug with incorrect passwords).

	Fixed various syntax errors.

2009-04-13  Tyler Romeo  <tylerromeo@gmail.com>

	*app/bootstrap.py: Fixed module names due to new directory structure.

	Request model has been changed into a factory: class is a factory by default and is used to make child instances.
	Intra-package references for the AccountShell controller now work.

	Other various syntax errors.

2009-03-31  Tyler Romeo  <tylerromeo@gmail.com>

	*app/controllers/AccountShell.py (AccountShell.execute): Fixed usage of 'false'. Hopefully this is the last.
	Moved the retrieval of the menu choice and the handling of the choice itself to separate functions.

	*app/models/Config.py (Config.__init__): Removed initOptions, unnecessary.
	*app/models/Config.py (Config.updateFromFile): Added line to strip newline at end of configuration options.

	*app/models/Database.py (Database.updateFromFile): Fixed mixup of variable names.
	*app/models/Database.py (Database.RequestFilename): Fixed path resolution using os.path.abspath().

2009-03-27  Tyler Roemo  <tylerromeo@gmail.com>

	Exchanged invalid "true" and "false" return values with 1 and 0.

	Added controller for Account Shell.
