@@ -1,4 +1,5 @@
-from .views.AccountShell import MainMenu
+from .views.AccountShell import AccountShell_MainMenu
+from .views.AdminPanel import AdminPanel_MainMenu
 from .views.Common import PrintMessage
 
 class AccountShell():
@@ -9,7 +10,7 @@ class AccountShell():
 	def execute(self):
 		inmenu = 1
 		while inmenu:
-			status = MainMenu()
+			status = AccountShell_MainMenu()
 			if status == 1:
 				return 1
 			elif status == 0:
@@ -19,8 +20,6 @@ class AccountShell():
 				message = self.handleRequest(status, request)
 				PrintMessage(message)
 		return 0
-	def getMenuChoice(self):
-		return app.views.AccountShell.MainMenu()
 	def handleRequest(self, status, request):
 		if status[0] == 'Request_Create()':
 			request.new = 1
@@ -39,6 +38,41 @@ class AccountShell():
 				message = 'Request deleted successfully.'
 			else:
 				message = 'Incorrect username/password.'
+		else:
+			message = 0
+		return message
+
+class AdminPanel():
+	def __init__(self, config, database, request):
+		self.config = config
+		self.database = database
+		self.request = request
+	def execute(self):
+		inmenu = 1
+		while inmenu:
+			status = AdminPanel_MainMenu(self.database.data)
+			if status == 1:
+				return 1
+			elif status == 0:
+				inmenu = 0
+			else:
+				request = self.request.newInstance()
+				message = self.handleRequest(status, request)
+				PrintMessage(message)
+		return 0
+	def handleRequest(self, status, request):
+		if status[0] == 'Request_List()':
+			message = ''
+		elif status[0] == 'Request_Approve()':
+			request.putInfo(status[1])
+			request.updateFromDatabase()
+			request.approve()
+			message = 'Request successfully approved.'
+		elif status[0] == 'Request_Deny()':
+			request.putInfo(status[1])
+			request.updateFromDatabase()
+			request.deny()
+			message = 'Request successfully denied.'
 		else:
 			message = 0
 		return message
